created like service

--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -27,7 +27,7 @@
           <img src="../../assets/ss.png" class="rounded-circle profile-img" style="width: 2.5rem; height: 2.5rem; border: 1px solid black;">
         </div>
         <div class="col-lg-10">
-          <div><b>{{item.user.instaHandle}}</b></div>
+          <div><b>{{item.post.user.instaHandle}}</b></div>
         </div>
         <div class="col-lg-1">
           <span ><b><h3 >...</h3></b></span>
@@ -37,23 +37,24 @@
         <img [src]="postImages[i]" class="img-responsive" style="width: 100%; ">
       </div>
       <div class="row like-comment-row" style="padding-top:0.4rem;">
-        <input type="checkbox"  id="togglelike" class="visually-hidden">
-        <label for="togglelike" (click)="like(item._id)"  class="control"></label>
+        <a (click)="toggleLike(item.post._id,'inc')" *ngIf="!item.post.relation"><img src="../../assets/images/igheart.png" ></a>
+        <a (click)="toggleLike(item.post._id,'dec')" *ngIf="item.post.relation"><img src="../../assets/images/heartr.png" ></a>
         <img src="../../assets/images/comment1.png" style="width:1.7rem; height:1.5rem; opacity: 0.75;">
       </div>
       <div class="row" style="padding:0 2rem" >
-        <span *ngIf="item.count.likeCount != 0">Liked by<b>{{item.likesArray[0].likedBy.instaHandle}}</b></span><div *ngIf="item.count.likeCount-1>0" >and {{item.count.likeCount-1}} others</div>
+        <span *ngIf="item.post.count.likeCount > 0">{{item.post.relation}}Liked by<b>{{item.post.likesArray[0].likedBy.instaHandle}}</b></span><div *ngIf="item.post.count.likeCount-1>0" >and {{item.post.count.likeCount-1}} others</div>
       </div>
       <div class="row" style="padding:0 2rem ">
-        <span></span><b>{{item.user.instaHandle}}</b><span>{{item.caption}}</span>
+        <span></span><b>{{item.post.user.instaHandle}}</b><span>{{item.post.caption}}</span>
       </div>
-      <div *ngIf="item.count.commentCount>0">
-        <span class="viewComments" *ngIf="item.count.commentCount>2">View all {{item.count.commentCount}} comments</span>
-        <span class="row" *ngIf="item.count.commentCount>0"><b>{{item.commentsArray[0].commentedBy.instaHandle}}</b></span>
-        <span class="row" *ngIf="item.count.commentCount>1"><b>{{item.commentsArray[1].commentedBy.instaHandle}}</b></span>
+      <div *ngIf="item.post.count.commentCount>0">
+        <span class="viewComments" *ngIf="item.post.count.commentCount>2">View all {{item.post.count.commentCount}} comments</span>
+        <span class="row" *ngIf="item.post.count.commentCount>0"><b>{{item.post.commentsArray[0].commentedBy.instaHandle}}</b></span>
+        <span class="row" *ngIf="item.count.post.commentCount>1"><b>{{item.post.commentsArray[1].commentedBy.instaHandle}}</b></span>
       </div>
       <div class="row add-comment-section">
         <input type="text" style="height: 4rem; width:100%; border: 1px solid #EFEFEF; border-bottom: none; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;" placeholder="  Add a comment...">
+        <button type="submit" class="post-create--btn_post">Post</button>
       </div>
     </div>
   </div>
