--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -2,10 +2,11 @@
 
 <div class="container-fluid" style="background-color: #FAFAFA;">
   
-  
+  <div class="col-10 mt-5">
   <app-create-post [bufferedImage]="bufferedImage"></app-create-post>
-  
+  </div>
   <div class="row">
+    <div class="col-10">
     <div *ngFor = "let item of feed; let i = index" class="col-12 col-lg-5 offset-lg-2" style="background-color: white; border:1px solid #DBDBDB; margin-top: 2rem; margin-bottom: 2rem; border-radius: 5px;">
       <div class="row user-details-row" style="padding: 0.5rem 0;">
         <div class="col-lg-1">
@@ -40,6 +41,10 @@
       <div class="row add-comment-section">
         <input type="text" style="height: 4rem; width:100%; border: 1px solid #EFEFEF; border-bottom: none; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;" placeholder="  Add a comment...">
       </div>
+    </div>
+    </div>
+    <div class="col-2">
+      <app-suggestion-for-u></app-suggestion-for-u>
     </div>
   </div>
 </div>
