--- a/insta-clone/src/app/suggestion-for-u/suggestion-for-u.component.css
+++ b/insta-clone/src/app/suggestion-for-u/suggestion-for-u.component.css
@@ -6,3 +6,16 @@
     color: #262626 !important;
     font: 12px;
 }
+.card-body{
+    margin-left: -250px;
+    background-color: #ffffff;
+    min-width: 340px;
+    width: 340px;
+    overflow: auto;
+    max-height: 500px;
+    margin-top: -100px;
+    position: fixed;  
+}
+hr{
+border-color: #ffffff;
+}
