--- a/insta-clone/src/app/suggestion-for-u/suggestion-for-u.component.html
+++ b/insta-clone/src/app/suggestion-for-u/suggestion-for-u.component.html
@@ -8,9 +8,11 @@
       <hr />
       <div *ngFor="
           let user of usersArray">
+          <div  *ngIf="user.instaHandle!=loggedInUser.data.instaHandle">
         <p><img src="https://picsum.photos/200/200?random" class="rounded-circle float-left mr-2" width="40">
           <a [routerLink]="['/profile', user.instaHandle]" href="" class="text-design">{{user.name}} <small class="about-design">{{user.instaHandle}}</small></a></p>
         <hr>
+        </div>
       </div>
     </div>
     </div>
