--- a/insta-clone/src/app/create-post/create-post.component.html
+++ b/insta-clone/src/app/create-post/create-post.component.html
@@ -18,7 +18,7 @@
 </div> -->
 
 
-<div class="row">
+<div class="row container">
   <form class="post-create col-lg-5 offset-lg-2" #form="ngForm" (ngSubmit)="createPostHandler(form.value)">
     <div class="post-create__primary">
       <img class="post-create__primary--user_img" [src]="bufferedImage" alt="pro-img">
@@ -30,8 +30,9 @@
         <a class="post-create--image_upload"><i class="fa fa-image fa-2x"></i></a>
       </label>
       <input id="file-input" name="imageFile" type="file" accept="image/*" class="custom-file-input" ngModel (change)="selectImage($event)" />
-  
       <button type="submit" class="post-create--btn_post">Post</button>
     </div>
   </form>
+  <div class="preview" [ngStyle]="{'background-image': 'url('+preview+')'}"></div>
+
 </div>
