--- a/insta-clone/src/app/create-post/create-post.component.scss
+++ b/insta-clone/src/app/create-post/create-post.component.scss
@@ -1,8 +1,11 @@
+.container{
+  margin-top:1rem;
+}
+
 .post-create{
   border: 1px solid #cdcdcd;
   border-radius: 5px;
   background-color: white;
-  margin-top:1rem;
 
 
 &__primary{
@@ -188,3 +191,9 @@ background-image: linear-gradient(
 url(https://lh3.googleusercontent.com/proxy/o6ElyPirttjJVz_H_lUZDC_EEMd6vQEPt_rm-CMcSG3_PGzeNfOJyqzCExI35eDsMlfpL9HGCUpnXvcWLD9z8RQaitPzooagNuD6v5KwEXiH8z7ppa2cASrcunOHaQK8vmj5fmC-rymWVpP8tPuY6kZeAEf0XtRUxnM);
 }
 
+.preview{
+  width: 14%;
+  max-height: 10rem;
+  background-size: cover;
+  background-position: center;
+}
