--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -37,8 +37,8 @@
         <span class="row" *ngIf="item.count.post.commentCount>1"><b>{{item.post.commentsArray[1].commentedBy.instaHandle}}</b></span>
       </div>
       <div class="row add-comment-section">
-        <input type="text" style="height: 4rem; width:100%; border: 1px solid #EFEFEF; border-bottom: none; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;" placeholder="  Add a comment...">
-        <button type="submit" class="post-create--btn_post">Post</button>
+        <input type="text" style="height: 4rem; width:100%; border: 1px solid #EFEFEF; border-bottom: none; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;" placeholder="  Add a comment..." #commentInput>
+        <button type="submit" class="post-create--btn_post" (click)="createComment(commentInput.value, item.post._id)">Post</button>
       </div>
     </div>
   
