--- a/insta-clone/src/app/create-post/create-post.component.scss
+++ b/insta-clone/src/app/create-post/create-post.component.scss
@@ -12,6 +12,17 @@
     margin-left: 0.8rem;
     display: flex;
     justify-content: space-around;
+    position: relative;
+
+    &--alert{
+      position: absolute;
+      right: 0;
+      top: 0;
+      color: red;
+      width: 100%;
+      text-align: right;
+      font-size: 1.24rem;
+    }
 
     &--user_img{
         height: 2.6rem;
