--- a/insta-clone/src/app/login/login.component.html
+++ b/insta-clone/src/app/login/login.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="row input-row">
         <form #form="ngForm" (ngSubmit)="loginFunction(form.value)">
-          <input type="text" name="instaHandle" required #instaHandle="ngModel" ngModel  placeholder="Phone number, username or email"  class="input-1" />
+          <input type="text" name="instaHandle" required #instaHandle="ngModel" ngModel  placeholder="Phone number, username, or email"  class="input-1" />
         
           <input type="password" name="password" required #password="ngModel" ngModel placeholder="Password"  class="input-2" />
         
