--- a/insta-clone/src/app/login/login.component.css
+++ b/insta-clone/src/app/login/login.component.css
@@ -44,6 +44,12 @@
   font-family: Arial, Helvetica, sans-serif;
 
 }
+.input-1::placeholder{
+  font-size: 0.79rem;
+}
+.input-2::placeholder{
+  font-size: 0.79rem;
+}
 
 .login-btn {
   width: 100%;
