--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -8,10 +8,10 @@
     <div *ngFor = "let item of feed; let i = index" class="col-lg-5 offset-lg-2" style="background-color: white; border:1px solid #DBDBDB; margin-top: 2rem; margin-bottom: 2rem; border-radius: 5px;">
       <div class="row user-details-row" style="padding: 0.5rem 0;">
         <div class="col-lg-1">
-          <img src="../../assets/ss.png" class="rounded-circle profile-img" style="width: 2.5rem; height: 2.5rem; border: 1px solid black;">
+          <img [src]="postUserImages[i]? postUserImages[i] : 'https://p7.hiclipart.com/preview/802/786/502/google-account-google-search-customer-service-google-logo-login-button-thumbnail.jpg'" class="rounded-circle profile-img'" style="width: 2.5rem; height: 2.5rem;">
         </div>
         <div class="col-lg-10">
-          <div><b>{{item.post.user.instaHandle}}</b></div>
+          <div><a class="userid" [routerLink]="['../profile', item.post.user.instaHandle]"><b>{{item.post.user.instaHandle}}</b></a></div>
         </div>
         <div class="col-lg-1">
           <span [routerLink]="['/post/'+item.post._id]"><b><h3 >...</h3></b></span>
@@ -36,9 +36,9 @@
         <span class="row" *ngIf="item.post.commentsArray[0]"><a class="userid" [routerLink]="['../profile', item.post.commentsArray[0].commentedBy.instaHandle]"><b>{{item.post.commentsArray[0].commentedBy.instaHandle}}</b></a><span>{{item.post.commentsArray[0].content}}</span></span>
         <span class="row" *ngIf="item.post.commentsArray[1]"><a class="userid" [routerLink]="['../profile', item.post.commentsArray[1].commentedBy.instaHandle]"><b>{{item.post.commentsArray[1].commentedBy.instaHandle}}</b></a><span>{{item.post.commentsArray[1].content}}</span></span>
       </div>
-      <div class="row add-comment-section">
-        <input type="text" style="height: 4rem;" placeholder="  Add a comment..." #commentInput>
-        <button type="submit" (click)="createComment(commentInput.value, item.post._id)">Post</button>
+      <div class="row add-comment-section" [ngStyle]="(!commentInput.valid && commentInput.dirty) && {'border': '1px solid red'}">
+        <input type="text" style="height: 4rem;" required ngModel placeholder="  Add a comment..." #commentInput="ngModel">
+        <button type="submit" [ngStyle]="(!commentInput.valid) && {'color': 'rgba(0, 148, 246, 0.432)'}" (click)="createComment(commentInput.value, item.post._id)">Post</button>
       </div>
     </div>
   
