--- a/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
+++ b/insta-clone/src/app/profile-dashboard/profile-dashboard.component.html
@@ -135,7 +135,7 @@
 <div class="container">
     <div class="row ml-4 mr-1">
         <div class="col-lg-3 offset-lg-1 mt-4 profile-image-div">
-            <img [src]="image" alt="Profile Image" class="rounded-circle profile-img" data-toggle="modal" data-target="#uploadPicModal">
+            <img [src]="image? image : 'https://p7.hiclipart.com/preview/802/786/502/google-account-google-search-customer-service-google-logo-login-button-thumbnail.jpg'" alt="Profile Image" class="rounded-circle profile-img" data-toggle="modal" data-target="#uploadPicModal">
         </div>
         <div class="col-lg-8 mt-4 profile-details">
             <div class="row edit-profile-div">
