--- a/insta-clone/src/app/create-post/create-post.component.html
+++ b/insta-clone/src/app/create-post/create-post.component.html
@@ -12,7 +12,7 @@
         <a class="post-create--image_upload"><i class="fa fa-image fa-2x"></i></a>
       </label>
       <input id="file-input" required name="imageFile" type="file" accept="image/*" class="custom-file-input" ngModel (change)="selectImage($event)" />
-      <button type="submit" class="post-create--btn_post">Post</button>
+      <button type="submit" [disabled]="!form.valid" [ngStyle]="(!form.valid) && {'background-color': 'rgba(0, 148, 246, 0.432)', 'cursor': 'not-allowed'}" class="post-create--btn_post">Post</button>
     </div>
   </form>
   <div class="preview" [ngStyle]="{'background-image': 'url('+preview+')'}"></div>
