--- a/insta-clone/src/app/feed/feed.component.html
+++ b/insta-clone/src/app/feed/feed.component.html
@@ -14,31 +14,31 @@
           <div><a class="userid" [routerLink]="['../profile', item.post.user.instaHandle]"><b>{{item.post.user.instaHandle}}</b></a></div>
         </div>
         <div class="col-lg-1">
-          <span [routerLink]="['/post/'+item.post._id]"><b><h3 >...</h3></b></span>
+          <span [routerLink]="['/post/'+item.post._id]" style="cursor: pointer;"><b><h3 >...</h3></b></span>
         </div>
       </div>
       <div class="row user-image-row" *ngIf="postImages[i]">
         <img [src]="postImages[i]" class="img-responsive" style="width: 100%; ">
       </div>
       <div class="row like-comment-row">
-        <a (click)="toggleLike(item.post._id,'inc')" *ngIf="!item.post.relation"><img src="../../assets/images/igheart.png" ></a>
-        <a (click)="toggleLike(item.post._id,'dec')" *ngIf="item.post.relation"><img src="../../assets/images/heartr.png" ></a>
+        <a (click)="toggleLike(item.post._id,'inc')" *ngIf="!item.relation"><i class="fa fa-heart-o" aria-hidden="true" ></i></a>
+        <a (click)="toggleLike(item.post._id,'dec')" *ngIf="item.relation"><i class="fa fa-heart" aria-hidden="true" ></i></a>
         <img src="../../assets/images/comment1.png">
       </div>
-      <div class="row" style="padding:0 2rem" >
-        <span *ngIf="item.post.count.likeCount > 0" >Liked by<a class="userid" [routerLink]="['../profile', item.post.likesArray[0].likedBy.instaHandle]"><b>{{item.post.likesArray[0].likedBy.instaHandle}}</b></a>and<a (click)="openDialog(item.post._id)" *ngIf="item.post.count.likeCount-1 > 0" >{{item.post.count.likeCount-1}} others</a></span>
+      <div class="row" style="padding-left: 0.75rem" >
+        <span *ngIf="item.post.count.likeCount > 0" >Liked by<a class="userid" [routerLink]="['../profile', item.post.likesArray[0].likedBy.instaHandle]"><b>{{item.post.likesArray[0].likedBy.instaHandle}}</b></a><a (click)="openDialog(item.post._id)" *ngIf="item.post.count.likeCount-1 > 0" >and {{item.post.count.likeCount-1}} others</a></span>
       </div>
       <div class="row">
         <span><a class="userid" [routerLink]="['../profile', item.post.user.instaHandle]"><b>{{item.post.user.instaHandle}}</b></a></span><span>{{item.post.caption}}</span>
       </div>
       <div *ngIf="item.post.count.commentCount>0">
-        <span class="viewComments" *ngIf="item.post.count.commentCount>2">View all {{item.post.count.commentCount}} comments</span>
+        <span class="viewComments" *ngIf="item.post.count.commentCount>2"><a class="viewComments" [routerLink]="['/post/'+item.post._id]">View all {{item.post.count.commentCount}} comments</a></span>
         <span class="row" *ngIf="item.post.commentsArray[0]"><a class="userid" [routerLink]="['../profile', item.post.commentsArray[0].commentedBy.instaHandle]"><b>{{item.post.commentsArray[0].commentedBy.instaHandle}}</b></a><span>{{item.post.commentsArray[0].content}}</span></span>
         <span class="row" *ngIf="item.post.commentsArray[1]"><a class="userid" [routerLink]="['../profile', item.post.commentsArray[1].commentedBy.instaHandle]"><b>{{item.post.commentsArray[1].commentedBy.instaHandle}}</b></a><span>{{item.post.commentsArray[1].content}}</span></span>
       </div>
-      <div class="row add-comment-section" [ngStyle]="(!commentInput.valid && commentInput.dirty) && {'border': '1px solid red'}">
+      <div class="row add-comment-section">
         <input type="text" style="height: 4rem;" required ngModel placeholder="  Add a comment..." #commentInput="ngModel">
-        <button type="submit" [ngStyle]="(!commentInput.valid) && {'color': 'rgba(0, 148, 246, 0.432)'}" (click)="createComment(commentInput.value, item.post._id)">Post</button>
+        <button type="submit" [disabled]="!commentInput.valid" [ngStyle]="(!commentInput.valid) && {'color': 'rgba(0, 148, 246, 0.432)', 'cursor': 'not-allowed'}" (click)="createComment(commentInput.value, item.post._id)">Post</button>
       </div>
     </div>
   
