--- a/insta-clone/src/app/feed/feed.component.scss
+++ b/insta-clone/src/app/feed/feed.component.scss
@@ -211,6 +211,7 @@ button.following:not(.wait):hover .msg-unfollow{
 
 .viewComments{
 color: #8e8e8e;
+text-decoration: none;
 }
 
 a{
@@ -266,4 +267,24 @@ a{
     text-transform: inherit;
     text-overflow: ellipsis;
   }
+}
+
+.fa-heart-o {
+  color: black;
+  font-size: 1.6rem;
+  cursor: pointer;
+  animation: pulse .2s ease;
+}
+
+.fa-heart {
+  color: red;
+  font-size: 1.6rem;
+  cursor: pointer;
+  animation: pulse .2s ease;
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.3); }
+  100% { transform: scale(1); }
 }
