--- a/insta-clone/src/app/view-post/view-post.component.scss
+++ b/insta-clone/src/app/view-post/view-post.component.scss
@@ -61,10 +61,12 @@ padding:0 4rem;
 .dropdown-toggle::after{
     display: none;
 }
-/* .caption-and-comments::-webkit-scrollbar {
+
+.caption-and-comments::-webkit-scrollbar {
+    visibility: hidden;
     
   }
-   */
+   
 .caption-and-comments {
     -ms-overflow-style: none;
     display: flex;
@@ -76,4 +78,47 @@ padding:0 4rem;
 ul{
     list-style-type: none;
 }
+  
+
+.userid{
+    color: #262626;
+    color: rgba(var(--i1d,38,38,38),1);
+    margin-right: 0.65rem;
+    text-decoration: none;
+    padding-left: 0.75rem;
+  }
+
+  
+.add-comment-section{
+    display: flex;
+    border-top: 0.65px solid #DBDBDB;
+    border-bottom: 0.65px solid #DBDBDB;
+    
+    & > input{
+      margin-left: 0.75rem;
+      border: none;
+      outline: none;
+      flex: 1;
+    }
+  
+    & > button{
+      display: inline-block;
+      padding: 0;
+      align-self: center;
+      flex: 0.1;
+      border: 0;
+      color: #0095f6;
+      color: rgba(var(--d69,0,149,246),1);
+      display: inline;
+      position: relative;
+      cursor: pointer;
+      font-weight: 500;
+      padding: 5px 9px;
+      text-align: center;
+      text-transform: inherit;
+      text-overflow: ellipsis;
+    }
+  }
+
+
   
