--- a/insta-clone/src/app/view-post/view-post.component.scss
+++ b/insta-clone/src/app/view-post/view-post.component.scss
@@ -45,6 +45,27 @@
     
     
   }
+
+  .fa-heart-o {
+    color: black;
+    font-size: 1.6rem;
+    cursor: pointer;
+    animation: pulse .2s ease;
+  }
+  
+  .fa-heart {
+    color: red;
+    font-size: 1.6rem;
+    cursor: pointer;
+    animation: pulse .2s ease;
+  }
+  
+  @keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.3); }
+    100% { transform: scale(1); }
+  }
+
 .view-replies{
 width: 100%; 
 text-align: center; 
@@ -120,5 +141,9 @@ ul{
     }
   }
 
-
+  .like-comment-row{
+    & > * {
+      padding: 1.65rem 0.65rem 1.6rem 0.65rem;
+    }
+  }
   
