--- a/insta-clone/src/app/feed/feed.component.scss
+++ b/insta-clone/src/app/feed/feed.component.scss
@@ -288,3 +288,11 @@ a{
   50% { transform: scale(1.3); }
   100% { transform: scale(1); }
 }
+
+.row-time{
+  line-height: 1.2rem;
+  color: #8e8e8e;
+  text-decoration: none;
+  font-size: 0.75rem;
+  text-transform: uppercase;
+}
