--- a/insta-clone/src/app/change-password/change-password.component.html
+++ b/insta-clone/src/app/change-password/change-password.component.html
@@ -3,10 +3,10 @@
         <div class="col-lg-9 offset-lg-1" style=" margin-top: 2.5rem;">
             <div class="row">
                 <div class="col-lg-3">
-                    <img class="rounded-circle" src="../../assets/ss.png" style="width: 3rem; height: 3rem; float:right;">
+                    <img class="rounded-circle" alt="img" [src]="image" style="width: 3rem; height: 3rem; float:right;">
                 </div>
                 <div class="col-lg-9">
-                    <h4>{{instaHandle}}</h4>
+                    <h4 style="font-weight: 450;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">{{instaHandle}}</h4>
                 </div>
             </div>
             <form class="form-horizontal" #changePasswordForm="ngForm" (ngSubmit)="changePAssword(changePasswordForm)"  style="margin-top: 2.5rem;">
