--- a/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
+++ b/insta-clone/src/app/edit-profile-details/edit-profile-details.component.html
@@ -53,10 +53,10 @@
             <form class="form-horizontal" #form="ngForm">
             <div class="row">
                 <div class="col-lg-3">
-                    <img [src]="image" alt="Profile Image" class="rounded-circle profile-img" style="width: 3rem; height: 3rem; float: right;">
+                    <img [src]="image" alt="img" class="rounded-circle profile-img" style="width: 3rem; height: 3rem; float: right;">
                 </div>
                 <div class="col-lg-9">
-                    <h5>{{username}}</h5>
+                    <h5 style="font-weight: 450;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">{{username}}</h5>
                     <a href="" class="changeDP" data-toggle="modal" data-target="#uploadPicModal">Change Profile picture</a>
                 </div>
             </div>
