--- a/insta-clone/src/app/edit-profile/edit-profile.component.css
+++ b/insta-clone/src/app/edit-profile/edit-profile.component.css
@@ -74,6 +74,12 @@
       justify-content: space-around;
     } */
   }
+  @media only screen and (min-width: 1024px) {
+    .edit-profile-container{
+      margin-left: 19.6%;
+      width:66.5rem ;
+    }
+  }
   
 /*   
   @media only screen and (min-width: 900px) {
