--- a/insta-clone/src/app/view-post/view-post.component.html
+++ b/insta-clone/src/app/view-post/view-post.component.html
@@ -1,19 +1,20 @@
 <app-homenav></app-homenav>
 
-<div class="container">
+<div class="container show-post-component mt-5">
     <div class="row">
-        <div class="col-lg-6" style="background-color:#311D38;">
-            <div id="carouselExampleControls" class="carousel" data-ride="carousel" data-interval="false">
+        <div class="col-lg-8" style="background-color:#311D38;">
+          <img [src]="postImage" alt="post" style="width: 100%; height: 100%;">
+            <!-- <div id="carouselExampleControls" class="carousel" data-ride="carousel" data-interval="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block" [src]="postImage" alt="First slide">
+                    
                   </div>
-                  <!-- <div class="carousel-item">
+                  <div class="carousel-item">
                     <img class="d-block" src="https://www.w3schools.com/bootstrap/chicago.jpg" alt="Second slide">
                   </div>
                   <div class="carousel-item">
                     <img class="d-block" src="https://www.w3schools.com/bootstrap/la.jpg" alt="Third slide">
-                  </div> -->
+                  </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -23,9 +24,9 @@
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
-              </div>
+              </div> -->
         </div>
-        <div class="col-lg-6" style="border-right:1px solid  #EFEFEF; border-bottom: 1px solid  #EFEFEF; background-color: white;">
+        <div class="col-lg-4" style="border-right:1px solid  #EFEFEF; border-bottom: 1px solid  #EFEFEF; background-color: white;">
             <div class="row user-details-row" style="padding: 1rem 0; border-bottom: 1px solid  #EFEFEF;">
                 <div class="col-lg-1">
                   <img src="../../assets/ss.png" class="rounded-circle profile-img" style="width: 2.5rem; height: 2.5rem; border: 1px solid  #EFEFEF;">
@@ -34,7 +35,7 @@
                   <div><b>{{postObj.user.instaHandle}}</b></div>
                   <p style="line-height: 0.8;">{{postObj.location}}</p>
                 </div>
-                <div class="col-lg-5">
+                <div class="col-lg-4">
                     <span class="dot-before-follow-btn">.</span>
                     <button class="btn follow-btn-view-post">Follow</button>
                 </div>
@@ -44,10 +45,10 @@
             </div>
             <div class="row caption-and-comments" style="padding: 1rem; height: 25rem;display: flex;flex-direction: row; overflow-y: scroll; border-bottom: 1px solid  #EFEFEF;">
                 <div class="row caption">
-                    <div class="col-lg-1">
+                    <div class="col-lg-2">
                         <img src="../../assets/ss.png" class="rounded-circle profile-img" style="width: 2.5rem; height: 2.5rem; border: 1px solid  #EFEFEF;">
                     </div>
-                    <div class="col-lg-11" style="padding:0 2rem;">
+                    <div class="col-lg-10">
                       <!-- {{postObj | json}} -->
                         <a href="" class="username-post-caption userid"><b>{{postObj.user.instaHandle}}</b></a>
                         <span class="ml-2">{{postObj.caption}}</span>
@@ -55,10 +56,10 @@
                     </div>    
                 </div>
                 <div class="row comments" *ngFor = "let item of commentsArray">
-                    <div class="col-lg-1">
+                    <div class="col-lg-2">
                         <img src="../../assets/ss.png" class="rounded-circle profile-img" style="width: 2.5rem; height: 2.5rem; border: 1px solid  #EFEFEF;">
                     </div>
-                    <div class="col-lg-10"   style="padding:0 2rem;">
+                    <div class="col-lg-8">
                         <a href="" class="username-post-caption userid"><b>{{item.commentedBy.instaHandle}}</b></a>
                         <span class="ml-2">{{item.content}}</span>
                         <p><small><span>time&emsp;</span><span>12</span><span> likes&emsp;</span><span> Reply</span></small></p>
