--- a/insta-clone/src/app/view-post/view-post.component.scss
+++ b/insta-clone/src/app/view-post/view-post.component.scss
@@ -104,9 +104,8 @@ ul{
 .userid{
     color: #262626;
     color: rgba(var(--i1d,38,38,38),1);
-    margin-right: 0.65rem;
     text-decoration: none;
-    padding-left: 0.75rem;
+    
   }
 
   
@@ -123,6 +122,7 @@ ul{
     }
   
     & > button{
+      background-color: white;
       display: inline-block;
       padding: 0;
       align-self: center;
@@ -144,6 +144,13 @@ ul{
   .like-comment-row{
     & > * {
       padding: 1.65rem 0.65rem 1.6rem 0.65rem;
+    }
+  }
+
+  @media only screen and (min-width: 1024px) {
+    .show-post-component{
+      margin-left: 20%;
+      width:66.5rem ;
     }
   }
   
